welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:11: error: illegal start of simple expression
  }else{
  ^posNeg:11: error: ';' expected but 'else' found.
  }else{
   ^posNeg:16: error: Unmatched closing brace '}' ignored here
 }
 ^